--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "dependencies": {
         "body-parser": "^1.19.0",
         "cors": "^2.8.5",
+        "dotenv": "^10.0.0",
         "express": "^4.17.1",
-        "webpack": "^5.59.1",
         "webpack-cli": "^4.9.1"
     },
     "devDependencies": {
@@ -31,9 +31,11 @@
         "jest": "^27.3.1",
         "mini-css-extract-plugin": "^2.4.3",
         "node-sass": "^6.0.1",
+        "sass": "^1.43.3",
         "sass-loader": "^12.2.0",
         "style-loader": "^3.3.1",
         "terser-webpack-plugin": "^5.2.4",
+        "webpack": "^5.59.1",
         "webpack-dev-server": "^4.3.1",
         "workbox-webpack-plugin": "^6.3.0"
     }
