--- a/package.json
+++ b/package.json
@@ -25,6 +25,12 @@
         "clean-webpack-plugin": "^4.0.0",
         "css-loader": "^6.4.0",
         "css-minimizer-webpack-plugin": "^3.1.1",
+        "eslint": "^7.32.0",
+        "eslint-config-google": "^0.14.0",
+        "eslint-config-standard": "^16.0.3",
+        "eslint-plugin-import": "^2.25.2",
+        "eslint-plugin-node": "^11.1.0",
+        "eslint-plugin-promise": "^5.1.1",
         "file-loader": "^6.2.0",
         "html-loader": "^3.0.0",
         "html-webpack-plugin": "^5.4.0",
