--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "test": "jest",
         "start": "node src/server/server.js",
         "build-prod": "webpack --config webpack.prod.js",
-        "build-dev": "webpack-dev-server  --config webpack.dev.js --open"
+        "build-dev": "webpack-dev-server  --config webpack.dev.js --open",
+        "lint": "./node_modules/.bin/eslint src"
     },
     "author": "",
     "license": "ISC",
