feat: add no-var to .eslintrc.json

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,6 +29,7 @@
         ],
         "no-unused-vars": [
             "error", { "vars": "all", "args": "none", "ignoreRestSiblings": false }
-        ]
+        ],
+        "no-var": 1
     }
 }
